--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
 theme: jekyll-theme-minimal
-plugins: jekyll-avatar
-
 title: Welcome to @antoinezl 's Github Page
-description: a description
+description: The main purpose of this page is to reference the works that have been done during my Master's degree.
