--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
+---
 plugins:
   - jekyll-avatar
----
 theme: jekyll-theme-minimal
-title: Welcome to __@antoinezl__'s Github Page
+title: Welcome to @antoinezl 's Github Page
 {% avatar antoinezl %}
 description: This page references the works and projects that I have done during my Master's degree.
 ---
