--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,4 @@ theme: jekyll-theme-minimal
 title: Welcome to @antoinezl 's Github Page
 description: This page references the works and projects that I have done during my Master's degree.
 ---
-plugins:
-  - jekyll-avatar
+Here is my page.
