--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ---
 theme: jekyll-theme-minimal
-title: Welcome to @antoinezl 's Github Page
-description: This page references the works and projects that I have done during my Master's degree.
+title: @antoinezl
+description: Antoine Lu, French graduate of a Master's degree in Bioinformatics.
 ---
