--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ---
 theme: jekyll-theme-minimal
-title:  @antoinezl
+title: antoinezl.github.io
 description: Antoine Lu, French graduate of a Master's degree in Bioinformatics.
 ---
